index problem (in proses)

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <p id="demo" style="position: fixed;top: 40px;right: 40px;"></p>
     <p id="demo2" style="position: fixed;top: 60px;right: 40px;"></p>
   </div>
-  <div id="box"></div>
+  <div class="box"> Udin  </div>
+  <div class="box"> Bambang </div>
 </div>
 
 <script type="module" src="./main.js"></script>
 </body>
-</html>
+</html> 
