--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
 <body>
   
 <div class="container">
+  <div class="box"> 0  </div>
+  <div class="box"> 1 </div>
+  <div class="box"> 2 </div>
+  <div class="box"> 3 </div>
   <div style="user-select: none;">
     <p id="demo" style="position: fixed;top: 40px;right: 40px;"></p>
     <p id="demo2" style="position: fixed;top: 60px;right: 40px;"></p>
+    <p id="demo3" style="position: fixed;top: 80px;right: 40px;"></p>
+    <p id="demo4" style="position: fixed;top: 100px;right: 40px;"></p>
+    <p id="demo5" style="position: fixed;top: 140px;right: 40px;"></p>
   </div>
-  <div class="box"> Udin  </div>
-  <div class="box"> Bambang </div>
+
+  <!-- <button id="btn" style="position: absolute;bottom: 20px;left: 20px;">Add card</button> -->
 </div>
+
+
 
 <script type="module" src="./main.js"></script>
 </body>
