--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p id="demo5" style="position: fixed; top: 140px; right: 40px"></p>
       </div>
 
-      <button id="btn" onclick="add()" style="position: absolute;bottom: 20px;left: 20px;">Add card</button>
+      <button id="btn" style="position: absolute;bottom: 20px;left: 20px;">Add card</button>
     </div>
 
     <script>
@@ -35,22 +35,22 @@
       }
 
 
-      function add() {
-        // let test = document.querySelectorAll(".box");
-        const para = document.createElement("div");
-        const node = document.createTextNode("Hallo bambang");
-        para.appendChild(node);
-        para.classList.add("box");
+      // function add() {
+      //   // let test = document.querySelectorAll(".box");
+      //   const para = document.createElement("div");
+      //   const node = document.createTextNode("Hallo bambang");
+      //   para.appendChild(node);
+      //   para.classList.add("box");
 
-        container.appendChild(para);
+      //   container.appendChild(para);
 
-        // const box = document.querySelectorAll(".box");
-        box.forEach((x) => {
+      //   // const box = document.querySelectorAll(".box");
+      //   box.forEach((x) => {
           
-          console.log(x);
-        });
-        console.log("\n");
-      }
+      //     console.log(x);
+      //   });
+      //   console.log("\n");
+      // }
     </script>
 
     <script type="module" src="./main.js"></script>
