fix the style a little

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="main.css" />
     <title>Note app test</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <script src="https://kit.fontawesome.com/ba324e01bb.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container" id="container">
@@ -22,7 +23,7 @@
         <p id="demo5" style="position: fixed; top: 140px; right: 40px"></p>
       </div>
 
-      <button id="btn" style="position: absolute;bottom: 20px;left: 20px;">Add card</button>
+      <button id="btn" style="position: absolute;bottom: 20px;left: 20px;"><i class="fa-solid fa-plus"></i></button>
     </div>
 
     <script>
