add new drag and drop

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p id="demo5" style="position: fixed; top: 140px; right: 40px"></p>
       </div>
 
-      <button id="btn" style="position: absolute;bottom: 20px;left: 20px;"><i class="fa-solid fa-plus"></i></button>
+      <button id="btn" style="position: absolute;top: 20px;left: 20px;"><i class="fa-solid fa-plus"></i></button>
     </div>
 
     <script>
