--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       </div>
 
       <button id="btn" style="position: absolute;top: 20px;left: 20px;"><i class="fa-solid fa-plus"></i></button>
+      <div class="grab-container">  
+        <div class="triangle"></div><p class="grab-me">Drag me</p> 
+      </div>
     </div>
 
     <script>
