--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://kit.fontawesome.com/ba324e01bb.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    
     <div class="container" id="container">
       <div class="box">0</div>
       <div class="box">1</div>
@@ -23,7 +24,7 @@
         <p id="demo5" style="position: fixed; top: 140px; right: 40px"></p>
       </div>
 
-      <button id="btn" style="position: absolute;top: 20px;left: 20px;"><i class="fa-solid fa-plus"></i></button>
+      <button id="btn"><i class="fa-solid fa-plus"></i></button>
       <div class="grab-container">  
         <div class="triangle"></div><p class="grab-me">Drag me</p> 
       </div>
