--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
-    <title>Note app test</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="./main.css" />
+    <title>Note app test</title>
     <script src="https://kit.fontawesome.com/ba324e01bb.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -44,6 +44,7 @@
       }
     </script>
 
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./src/index.js"></script>
+    <!-- <script src="./dist/main.js"></script> -->
   </body>
 </html>
