--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       }
     </script>
 
-    <script type="module" src="./src/index.js"></script>
-    <!-- <script src="./dist/main.js"></script> -->
+    <!-- <script type="module" src="./src/index.js"></script> -->
+    <script src="./dist/main.js"></script>
   </body>
 </html>
