--- a/index.html
+++ b/index.html
@@ -50,7 +50,18 @@
     <div class="container" id="container">
 
       <!-- default box -->
-      <div class="box" data-min-rows='2'>Drag and drop tombol + untuk menambahkan kartu</div>
+      <div class="box" data-min-rows='2'>
+        <h1>Welcome</h1>
+        <hr>
+        Drag and drop tombol + untuk menambahkan kartu
+        <br>
+        Fitur terbaru: <br><br>
+        <ul>
+          <li>Auto save</li>
+          <li>Undo & redo ( lagi ngebug :') )</li>
+        </ul>
+      
+      </div>
       <!-- <div class="box" data-min-rows='2' autofocus>1</div>
       <div class="box" data-min-rows='2' autofocus>2</div>
       <div class="box" data-min-rows='2' autofocus>3</div> -->
