add update message

--- a/index.html
+++ b/index.html
@@ -55,12 +55,23 @@
         <hr>
         Drag and drop tombol + untuk menambahkan kartu
         <br>
-        Fitur terbaru: <br><br>
+        <br>
+        <strong> Fitur terbaru: </strong> <br><br>
         <ul>
           <li>Auto save</li>
           <li>Undo & redo ( lagi ngebug :') )</li>
+          <li>Animasi kartu</li>
         </ul>
-      
+        <br>
+        <strong> Next update: </strong> 
+        <br>
+        <br>
+        <ul>
+          <li>Save ke database</li>
+          <li>Realtime update menggunakan websocket</li>
+          <li>Save file</li>
+          <li>Print</li>
+        </ul>
       </div>
       <!-- <div class="box" data-min-rows='2' autofocus>1</div>
       <div class="box" data-min-rows='2' autofocus>2</div>
@@ -97,7 +108,7 @@
       }
     </script>
 
-    <script type="module" src="./src/index.js"></script>
-    <!-- <script src="./dist/main.js"></script> -->
+    <!-- <script type="module" src="./src/index.js"></script> -->
+    <script src="./dist/main.js"></script>
   </body>
 </html>
