update update msg

--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
         <br>
         <br>
         <ul>
+          <li>Save ke pdf</li>
+          <li>Auto expand</li>
           <li>Save ke database</li>
           <li>Realtime update menggunakan websocket</li>
-          <li>Save file</li>
           <li>Print</li>
         </ul>
       </div>
