--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
       
     </script>
 
-    <script type="module" src="./src/index.js"></script>
-    <!-- <script src="./dist/main.js"></script> -->
+    <!-- <script type="module" src="./src/index.js"></script> -->
+    <script src="./dist/main.js"></script>
 
 
 
