--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         <ul>
           <li>Select lebih dari satu card menggunakan shift</li>
           <li>Klik kanan untuk memunculkan menu</li>
+          <li>Move multiple card using arrow key</li>
         </ul>
       </div>
 
