--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div ><img style="transform: translate(0, 2px);" src="/src/asset/fly logo.svg" alt="fly" width="30px"></div>
       </section>
       <section>
-        <div class="item-box" id="h1"><img src="/src/asset/h1.svg" alt="h1-icon" width="18"></div>
-        <div class="item-box" id="h3"><img src="/src/asset/h3.svg" alt="h3-icon" width="19"></div>
+        <div class="item-box" id="h1"><i class="fa-solid fa-h"></i></div>
+        <!-- <div class="item-box" id="h3"><img src="/src/asset/h3.svg" alt="h3-icon" width="19"></div> -->
         <div class="item-box" id="paragraph"><i class="fa-solid fa-p"></i></div>
       </section>
       <section>
@@ -77,14 +77,14 @@
         <h1>Welcome</h1>
         <hr> 
         <p>
-         <strong> Drag and drop tombol + untuk menambahkan kartu</strong>
+          Drag and drop tombol + untuk menambahkan kartu
         </p>
         <br>
         Fitur terbaru: 
         <ul>
-          <li>Select lebih dari satu card menggunakan shift</li>
+          <li>Seleksi lebih dari satu kartu menggunakan shift</li>
           <li>Klik kanan untuk memunculkan menu</li>
-          <li>Move multiple card using arrow key</li>
+          <li>Pindah beberapa kartu menggunakan tombol panah</li>
         </ul>
       </div>
 
