--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
       <div class="menu" id="delete">Delete <span>Delete</span></div>
       <div class="menu" id="copy">Copy <span>Ctrl + Shift + C</span></div>
       <div class="menu" id="paste">Paste <span>Ctrl + Shift + V</span></div>
+      <div style="border-bottom: .5px solid #d4d4d4;margin: 8px 8px;"></div>
       <div class="menu" id="lock">Lock <span>Ctrl + L</span></div>
       <div class="menu" id="unlock">Unlock </div>
       <div class="menu" id="unlockall">Unlock all <span>Ctrl + Shift + L</span></div>
