add marker icon

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </section>
       <section>
         <div class="item-box" id="color"><img src="/src/asset/text-color.svg" alt="text-color" width="11"></div>
-        <div class="item-box" id="bg-color"><img src="/src/asset/back-color.svg" alt="text-back-color" width="11"></div>
+        <div class="item-box" id="bg-color"><img src="/src/asset/back-color.svg" alt="text-back-color" width="15"></div>
       </section>
     </div>
 
@@ -131,6 +131,7 @@
           <li>Seleksi lebih dari satu kartu menggunakan shift</li>
           <li>Klik kanan untuk memunculkan menu</li>
           <li>Pindah beberapa kartu menggunakan tombol panah</li>
+          <li>Ubah warna font dan background font</li>
         </ul>
       </div>
 
