--- a/index.html
+++ b/index.html
@@ -65,8 +65,54 @@
       <section><div class="item-box" id="btn"><img src="/src/asset/add-button.svg" alt="add-button-icon" width="15"></div></section>
       <section><div class="item-box side-copy" ><i class="fa-solid side-copy fa-copy" style="color: #8199aa;"></i></div></section>
       <section><div class="item-box side-delete"><i class="fa-solid side-delete fa-trash" style="color: #8199aa;"></i></div></section>
-      <section><div class="item-box"><i class="fa-solid fa-gear" style="color: #8199aa;"></i></div></section>
+      <section><div class="item-box" id="setting"><i class="fa-solid fa-gear" style="color: #8199aa;"></i></div></section>
     </div>
+
+
+
+
+
+
+    <div class="setting-container">
+
+
+      <div class="setting-modal">
+
+        <div class="setting-content-top">
+          <div class="profile">
+            <img src="/src/asset/Profile.svg" alt="profile" width="60">
+            <p><strong>John doe</strong></p>
+          </div>
+          <div class="horizontal-line"></div>
+        </div>
+
+        <div class="setting-content-bot">
+          <p class="title">SETTING</p>
+          <div class="wrapper"><i class="fa-solid fa-file-arrow-down"></i><p class="content">Download PDF</p></div>
+          <div class="wrapper"><i class="fa-solid fa-moon"></i><p class="content">Dark mode</p>
+              <div class="switch"><div class="switch-button"></div></div>
+          </div>
+          <div class="wrapper"><i class="fa-solid fa-address-book" style="font-size: 16px;"></i> <p class="content" style="padding-left: 4px;">Contact me</p></div>
+          <div class="wrapper"><i class="fa-solid fa-right-from-bracket"></i><p class="content" style="padding-left: 8px;">Log out</p></div>
+        </div>
+
+      </div>
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <div class="color-palette">
@@ -106,7 +152,7 @@
 
 
 
-
+    
 
 
 
