--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
           <li>Klik kanan untuk memunculkan menu</li>
           <li>Pindah beberapa kartu menggunakan tombol panah</li>
           <li>Ubah warna font dan background font</li>
+          <li>Add setting</li>
+          <li>Dark mode</li>
         </ul>
       </div>
 
