--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
       </section>
       <section>
         <div class="item-box" id="ul"><i class="fa-solid fa-list-ul"></i></div>
-        <div class="item-box" id="ol"><img src="/src/asset/ol.svg" alt="ol-icon" width="13"></div>
+        <div class="item-box" id="ol"><img src="/src/asset/ol.svg" alt="ol-icon" id="ol-icon" width="13.5"></div>
       </section>
       <section>
-        <div class="item-box" id="color"><img src="/src/asset/text-color.svg" alt="text-color" width="11"></div>
-        <div class="item-box" id="bg-color"><img src="/src/asset/back-color.svg" alt="text-back-color" width="15"></div>
+        <div class="item-box" id="color"><img src="/src/asset/text-color.svg" alt="text-color" id="text-color" width="11"></div>
+        <div class="item-box" id="bg-color"><img src="/src/asset/back-color.svg" alt="text-back-color" id="back-color" width="15"></div>
       </section>
     </div>
 
@@ -222,6 +222,8 @@
     <div id="document-context-menu">
       <div class="document-menu" id="d-select-all">Select all <span>Ctrl + A</span></div>
       <div class="document-menu" id="d-paste">Paste <span>Ctrl + Shift + V</span></div>
+      <div class="document-menu" id="unlockall">Unlock all <span>Ctrl + Shift + L</span></div>
+
     </div>
     
 
