add close button

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
       <div class="setting-modal">
-
+        <i class="fa-solid fa-xmark" id="close"></i>
         <div class="setting-content-top">
           <div class="profile">
             <img src="/src/asset/Profile.svg" alt="profile" width="60">
