--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <!-- ########### script ########## -->
     <script>
       // const box = document.querySelectorAll(".box");
-      // const container = document.getElementById("container");
+      const container = document.getElementById("container");
 
       // box.forEach((box, index) => {
 
@@ -251,9 +251,10 @@
       //   box.style.left = localStorage.getItem(`left${index}`);
       //   box.style.zIndex = localStorage.getItem(`index${index}`);
       // })  
-      // if (localStorage.getItem("container") != null) {
-      //   container.innerHTML = localStorage.getItem("container");
-      // }
+
+      if (localStorage.getItem("container") != null) {
+        container.innerHTML = localStorage.getItem("container");
+      }
 
       
     </script>
