--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <div class="setting-content-bot">
           <p class="title">SETTING</p>
-          <div class="wrapper"><i class="fa-solid fa-file-arrow-down"></i><p class="content">Download PDF</p></div>
+          <div class="wrapper" style="opacity: 0.5;"><i class="fa-solid fa-file-arrow-down"></i><p class="content">Download PDF</p></div>
           <div class="wrapper"><i class="fa-solid fa-moon"></i><p class="content">Dark mode</p>
               <div class="switch"><div class="switch-button"></div></div>
           </div>
