--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <i class="fa-solid fa-xmark" id="close"></i>
         <div class="setting-content-top">
           <div class="profile">
-            <img src="/src/asset/Profile.svg" alt="profile" width="60">
-            <p><strong>John doe</strong></p>
+            <img src="/src/asset/profile.svg" id="profile" alt="profile" width="60">
+            <p><strong id="profile-name">John doe</strong></p>
           </div>
           <div class="horizontal-line"></div>
         </div>
@@ -186,7 +186,7 @@
       }
     </script>
 
-    <!-- <script type="module" src="./src/index.js"></script> -->
-    <script src="./dist/main.js"></script>
+    <script type="module" src="./src/index.js"></script>
+    <!-- <script src="./dist/main.js"></script> -->
   </body>
 </html>
