--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <i class="fa-solid fa-xmark" id="close"></i>
         <div class="setting-content-top">
           <div class="profile">
-            <img src="/src/asset/profile.svg" id="profile" alt="profile" width="60">
+            <img src="/src/asset/profile-pic.svg" id="profile" alt="profile" width="60">
             <p><strong id="profile-name">John doe</strong></p>
           </div>
           <div class="horizontal-line"></div>
@@ -185,7 +185,7 @@
       }
     </script>
 
-    <!-- <script type="module" src="./src/index.js"></script> -->
-    <script src="./dist/main.js"></script>
+    <script type="module" src="./src/index.js"></script>
+    <!-- <script src="./dist/main.js"></script> -->
   </body>
 </html>
