--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       sessionStorage.setItem("before", "[]")
     </script>
 
-    <script type="module" src="./src/index.js"></script>
-    <!-- <script src="./dist/main.js"></script> -->
+    <!-- <script type="module" src="./src/index.js"></script> -->
+    <script src="./dist/main.js"></script>
   </body>
 </html>
