--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
       <div style="border-bottom: .5px solid #d4d4d4;margin: 8px 8px;"></div>
       <div class="document-menu" id="context-undo">Undo <span>Ctrl + Z</span></div>
       <div class="document-menu" id="context-redo">Redo <span>Ctrl + Y</span></div>
-      <div style="border-bottom: .5px solid #d4d4d4;margin: 8px 8px;"></div>
-      <div class="document-menu" id="d-delete">Delete <span>Delete</span></div>
+      <!-- <div style="border-bottom: .5px solid #d4d4d4;margin: 8px 8px;"></div> -->
+      <!-- <div class="document-menu" id="d-delete">Delete <span>Delete</span></div> -->
       <!-- <div class="document-menu" id="unlockall">Unlock all <span>Ctrl + Shift + L</span></div> -->
 
     </div>
