--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- <div ><img style="transform: translate(0, 2px);" src="/src/asset/fly logo.svg" alt="fly" width="30px"></div> -->
       </section>
       <section>
-        <div class="item-box" title="heading 1" id="h1"><i class="fa-solid fa-h"></i></div>
+        <div class="item-box" title="heading" id="h1"><i class="fa-solid fa-h"></i></div>
         <!-- <div class="item-box" id="h3"><img src="/src/asset/h3.svg" alt="h3-icon" width="19"></div> -->
         <div class="item-box" title="paragraph" id="paragraph"><i class="fa-solid fa-p"></i></div>
       </section>
@@ -133,7 +133,7 @@
           Drag and drop tombol + untuk menambahkan kartu
         </p>
         <br>
-        Fitur terbaru: 
+        <b>Fitur terbaru: </b>
         <ul>
           <li>Seleksi lebih dari satu kartu menggunakan shift</li>
           <li>Klik kanan untuk memunculkan menu</li>
@@ -187,7 +187,7 @@
       sessionStorage.setItem("before", "[]")
     </script>
 
-    <!-- <script type="module" src="./src/index.js"></script> -->
-    <script src="./dist/main.js"></script>
+    <script type="module" src="./src/index.js"></script>
+    <!-- <script src="./dist/main.js"></script> -->
   </body>
 </html>
