--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     <div class="container" id="container"> 
 
-      <div class="box" style="left: 40%;top: 40%;" spellcheck="false">
+      <div class="box" style="left: 30%;top: 30%;width: 200px;" spellcheck="false">
         <h1>Welcome</h1>
         <hr class="hr"> 
         <p>
