--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </section>
       <section>
         <div class="item-box" title="heading" id="h1"><i class="fa-solid fa-h"></i></div>
-        <!-- <div class="item-box" id="h3"><img src="/src/asset/h3.svg" alt="h3-icon" width="19"></div> -->
+        <div class="item-box" title="heading 3" id="h3"><img src="/src/asset/h3.svg" alt="h3-icon" width="19"></div>
         <div class="item-box" title="paragraph" id="paragraph"><i class="fa-solid fa-p"></i></div>
       </section>
       <section>
@@ -133,7 +133,7 @@
           Drag and drop tombol + untuk menambahkan kartu
         </p>
         <br>
-        <b>Fitur terbaru: </b>
+        <h3>Fitur terbaru: </h3>
         <ul>
           <li>Seleksi lebih dari satu kartu menggunakan shift</li>
           <li>Klik kanan untuk memunculkan menu</li>
@@ -142,6 +142,7 @@
           <li>Add setting</li>
           <li>Dark mode</li>
           <li>Selection on drag</li>
+          <li>Undo & redo</li>
         </ul>
       </div>
 
